--- a/index.html
+++ b/index.html
@@ -88,7 +88,7 @@
     <div class="formacao-container">
       <h2 class="subtitulo-formacao">Formação</h2>
       <div class="formacaoitem">
-        <h3 class="h3">Cursos Intensivos</h3>
+        <h3 class="h3">Cursos Intensivos.</h3>
         <ul>
           <li class="cursoshoras">UI/UX design <span>56h</span></li>
           <li class="cursoshoras">Front End para iniciantes <span>72h</span></li>
